# chakaton-ingostrax

./: README.md  package-lock.json  package.json  test-character-creation.js  test-fresh-session.js
insurance-api/: .env.example  .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml
insurance-api/app/api/: router.py
insurance-api/app/api/middlewares/: current_user.py  role_system.py  token.py
insurance-api/app/api/v1/: auth.py  background.py  round.py  session_game.py  user.py
insurance-api/app/core/: logger.py  settings.py
insurance-api/app/core/certs/: README.md  private.pem  public.pem
insurance-api/app/core/enum/: __init__.py  difficulty_level.py  redis_db.py  role.py  round.py
insurance-api/app/db/: redis_client.py
insurance-api/app/db/postgresql/: abstract_repo.py  base.py  db.py
insurance-api/app/db/postgresql/migrations/: env.py
insurance-api/app/models/: __init__.py
insurance-api/app/models/schemas/game/: background.py  event.py  get_event.py  report.py  solving.py  status.py
insurance-api/app/models/session_game/: model.py  repositories.py
insurance-api/app/models/session_game/schemas/: __init__.py  create.py  read.py  (+1 more)
insurance-api/app/models/user/: model.py  repositories.py
insurance-api/app/services/: background.py  round.py  session_game.py  user.py
insurance-api/app/utils/ai/: ollama.py
insurance-api/app/utils/errors/: error.py  response_code.py
insurance-api/docker/: Dockerfile  docker-compose.yml
insurance-api/logs/: app.log.2026-04-04  app.log.2026-04-05  app.log.2026-04-06  app.log.2026-04-07
(+171 files in other folders)
